re PR debug/43325 (C++ external inner reference does not override outer scope)

Fix for PR debug/43325

gcc/ChangeLog:
	PR debug/43325
	* dwarf2out.c (gen_variable_die): Allow debug info for variable
	re-declaration when it happens in a function.

gcc/testsuite/ChangeLog:
	PR debug/43325
	* c-c++-common/dwarf2/redeclaration-1.C: New test.

From-SVN: r157928